fixed issue that caused hexagon slider to be off center

--- a/components/TokenPage/HexagonSlider/hexagon_slider.module.scss
+++ b/components/TokenPage/HexagonSlider/hexagon_slider.module.scss
@@ -41,7 +41,6 @@ $width: 20rem;
   transform-style: preserve-3d;
   transform-origin: 50% 50%;
   perspective-origin: 50% 50%;
-  padding: 1rem;
 }
 
 .top, .bottom {
